force-app/main/default/objects/EV_PortalCaixaBankTalks__c/EV_PortalCaixaBankTalks__c.object-meta.xml
<CustomObject>
    <label>Portal CaixaBank Talks</label>
    <nameField>
        <displayFormat>PCT-{000000}</displayFormat>
        <label>Portal CaixaBank Talks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal CaixaBank Talks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>