force-app/main/default/objects/EV_PortalCaixaBankTalks__c/fields/EV_Categoria__c.field-meta.xml
<CustomField>
    <fullName>EV_Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Cultura y sociedad</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Desarrolla tu potencial</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Emprendimiento</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Gestión de las finanzas</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Gestión de las inversiones</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Impacto Social</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Innovación</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Mundo empresarial</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Protección y seguridad</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>Salud y bienestar</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Tecnología y mundo digital</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>