force-app/main/default/objects/EV_PortalCaixaBankTalks__c/fields/EV_Espacio__c.field-meta.xml
<CustomField>
    <fullName>EV_Espacio__c</fullName>
    <label>Categoría por perfil</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Acción Social</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Accionistas</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>AgroBank</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Banca Empresas</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Banca Negocios</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Banca Premier</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Banca Privada</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Familias</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Senior</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>DayOne</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>