force-app/main/default/objects/EV_PortalCaixaBankTalks__c/fields/EV_Palabras__c.field-meta.xml
<CustomField>
    <fullName>EV_Palabras__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Palabras para el buscador</inlineHelpText>
    <label>Palabras</label>
    <type>TextArea</type>
</CustomField>