force-app/main/default/objects/EV_PortalCaixaBankTalks__c/fields/EV_Podcast__c.field-meta.xml
<CustomField>
    <fullName>EV_Podcast__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Podcast</label>
    <type>Url</type>
</CustomField>