force-app/main/default/objects/EV_PortalCaixaBankTalks__c/fields/EV_Posicionamiento__c.field-meta.xml
<CustomField>
    <fullName>EV_Posicionamiento__c</fullName>
    <label>Posicionamiento del evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Destacado home</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Proximos eventos home</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Recomendados para ti</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Últimos añadidos</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Calendario</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Landing Ficha evento</label>
            </value>
            <value>
                <fullName>007</fullName>
                <isActive>false</isActive>
                <label>Calendario ficha</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>