force-app/main/default/objects/EV_PortalCaixaBankTalks__c/fields/EV_URLeventoCompleto__c.field-meta.xml
<CustomField>
    <fullName>EV_URLeventoCompleto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL evento completo</label>
    <type>Url</type>
</CustomField>