force-app/main/default/objects/EV_PortalCaixaBankTalks__c/fields/EV_VisibleFormula__c.field-meta.xml
<CustomField>
    <fullName>EV_VisibleFormula__c</fullName>
    <formula>IF((!ISBLANK(TEXT(EV_Fechadespublicacion__c)) &amp;&amp; EV_Fechadespublicacion__c &gt;= TODAY()) 
			&amp;&amp; (!ISBLANK(TEXT(EV_Evento__r.EV_Fechadespublicacion__c )) &amp;&amp; EV_Evento__r.EV_Fechadespublicacion__c &gt;= TODAY()), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visible Portal (Fecha fin vigencia)</label>
    <type>Checkbox</type>
</CustomField>