force-app/main/default/objects/EV_PortalCaixaBankTalks__c/fields/EV_VisiblePortal__c.field-meta.xml
<CustomField>
    <fullName>EV_VisiblePortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible Portal</label>
    <type>Checkbox</type>
</CustomField>